--- a/package.json
+++ b/package.json
@@ -3,12 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "animate.css": "^4.1.1",
+    "animate.css-react": "^1.1.0",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "fbjs": "^3.0.0",
+    "node-sass": "4.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-html-parser": "^2.0.2",
     "react-scripts": "4.0.0",
+    "react-scrollmagic": "^2.2.0",
+    "reactstrap": "^8.7.1",
+    "smooth-scroll": "^16.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
