--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "fbjs": "^3.0.0",
+    "gsap": "^3.5.1",
     "node-sass": "4.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -23,6 +24,7 @@
     "react-scripts": "4.0.0",
     "react-scrollmagic": "^2.2.0",
     "reactstrap": "^8.7.1",
+    "scrollmagic": "^2.0.8",
     "smooth-scroll": "^16.1.3",
     "web-vitals": "^0.2.4"
   },
